# esp-log-server

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  diagram.json  wokwi.toml
.cargo/: config.toml
src/: actor.rs  main.rs
