[package]
name = "esp-log-server"
version = "0.1.0"
authors = ["Borys Chyliński <borchy97@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-hal = { version = "0.19.0" }
esp-backtrace = { version = "0.13.0", features = [
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal-embassy = { version = "0.2.0", features = [] }
esp-println = { version = "0.10.0", features = ["log"] }
esp-wifi = { version = "0.7.0", features = [
    "utils",
    "wifi",
    "tcp",
    "embassy-net",
] }

embassy-sync = { version = "0.6.0" }
embassy-net = { version = "0.4.0", features = ["tcp", "dhcpv4", "medium-ip"] }
embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
embassy-futures = { version = "0.1.1" }
embassy-time = { version = "0.3.1", features = ["generic-queue-8"] }

heapless = { version = "0.8.0", default-features = false }
log = { version = "0.4.21" }
static_cell = "2.1.0"

[features]
esp32 = [
    "esp-hal/esp32",
    "esp-backtrace/esp32",
    "esp-hal-embassy/esp32",
    "esp-println/esp32",
    "esp-wifi/esp32",
]
async = ["esp-hal/async"]
default = ["esp32", "async"]


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread# embassy-time-driver = { version = "0.1.0", optional = true }
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev.package.esp-wifi]
opt-level = 3
